--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 I started making this program in June of 2015 as a way to give back to the Elementary OS project. I hope you enjoy using it.
 
-Kyle Agronick <agronick@gmail.com>
+Copyright (C) 2015 Kyle Agronick <agronick@gmail.com>
