--- a/README
+++ b/README
@@ -1,1 +1,22 @@
-TODO: Write readme
+#Relay
+### Created by Kyle Agronick <agronick@gmail.com>
+
+Relay is an IRC client that attemps to be small, quick, easy to use, elegant, and functional. 
+
+* **Installation and Licensing**  
+Please consult the `INSTALL` and `COPYING` files for more information.
+
+* **Website**  
+The project's oficial website is https://poisonpacket.wordpress.com/relay/
+
+* **Bugs**  
+Please report bugs at https://launchpad.net/relay
+
+* **Translations**  
+To contribute translations please visit http://translations.launchpad.net/relay
+
+* **Donations**  
+If you want to support the project, please consider a donation at https://poisonpacket.wordpress.com/relay/
+
+* **Further documentation**  
+For more documentation visit https://poisonpacket.wordpress.com/relay/
