Added info about Launchpad

--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 ### Created by Kyle Agronick <agronick@gmail.com>
 
 Relay is an IRC client that attemps to be small, quick, easy to use, elegant, and functional. 
+The Github and Launchpad repos are mirrored. You can find up-to-date information about Relay
+on Launchpad and Github.
 
 * **Installation and Licensing**  
 Please consult the `INSTALL` and `COPYING` files for more information.
