--- a/INSTALL
+++ b/INSTALL
@@ -12,6 +12,7 @@ libgranite-dev
 libsqlite3-dev
 libgee-0.8-dev
 libc6-dev
+libgtk-3-dev
 
 (Other versions of valac may work. But newer versions seems to have a bug that prevents compiling)
 
@@ -23,6 +24,14 @@ cd build
 ../autogen.sh
 make
 sudo make install
+
+Troubleshooting:
+If you experience issues with the line 
+output.buffer.insert_with_tags_by_name(end, text, text.length, tag.name);
+in channel_tab.vala
+
+You have a newer version of libgtk-3-dev than what ships with Elementary OS Freya. You can change this line to:
+output.buffer.insert_with_tags_by_name(ref end, text, text.length, tag.name);
 
 You can test the program by running
 src/relay
