--- a/INSTALL
+++ b/INSTALL
@@ -13,6 +13,7 @@ libsqlite3-dev
 libgee-0.8-dev
 libc6-dev
 libgtk-3-dev
+libtool
 
 (Other versions of valac may work. But newer versions seems to have a bug that prevents compiling)
 
