Small readme change

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 #Relay
-### Created by Kyle Agronick <agronick@gmail.com>
+Created by Kyle Agronick <agronick@gmail.com>
 
 Relay is an IRC client that attemps to be small, quick, easy to use, elegant, and functional. 
 The Github and Launchpad repos are mirrored. You can find up-to-date information about Relay
