--- a/INSTALL
+++ b/INSTALL
@@ -13,9 +13,8 @@ libsqlite3-dev
 libgee-0.8-dev
 libgtk-3-dev
 libtool-bin
-libsoup2.4-dev
 
-(sudo apt-get install libtool-bin libsoup2.4-dev libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
+(sudo apt-get install libtool-bin libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
 
 (Other versions of valac may work. But newer versions seems to have a bug that prevents compiling)
 
