--- a/INSTALL
+++ b/INSTALL
@@ -1,8 +1,9 @@
 --------------------------------------------------------------------------------
 DEPENDENCIES
 --------------------------------------------------------------------------------
+These are listed as Ubuntu packages. (They are reported to be the same on Arch 
+Linux as well)  You may need to adjust for your distribution.
 To compile you will need the following dependencies:
-(These are listed as Ubuntu packages. You may need to adjust for your distribution.)
 
 automake
 libglib2.0-dev
@@ -12,9 +13,10 @@ libgranite-dev
 libsqlite3-dev
 libgee-0.8-dev
 libgtk-3-dev
-libtool-bin
+libtool
 
-(sudo apt-get install libtool-bin libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
+If you are on a distribution that uses apt-get you can use the following command.
+(sudo apt-get install libtool libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
 
 (Other versions of valac may work. But newer versions seems to have a bug that prevents compiling)
 
