--- a/INSTALL
+++ b/INSTALL
@@ -13,10 +13,10 @@ libgranite-dev
 libsqlite3-dev
 libgee-0.8-dev
 libgtk-3-dev
-libtool
+libtool-bin or libtool depending on the distro
 
 If you are on a distribution that uses apt-get you can use the following command.
-(sudo apt-get install libtool libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
+(sudo apt-get install libtool-bin libtool libgtk-3-dev libgee-0.8-dev libsqlite3-dev libgranite-dev valac-0.26 libx11-dev libglib2.0-dev automake)
 
 (Other versions of valac may work. But newer versions seems to have a bug that prevents compiling)
 
